--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,7 +141,7 @@ img {
     width: 80%;
     height: 100%;
     padding: 2rem;
-    background-color: var(--second-color);
+    background-color: #116b95;
     transition: .5s;
   }
 }
